refactor: rename clawdbot to openclaw across all articles
- Renamed 8 HTML files from clawdbot to openclaw
- Updated internal links in 5 articles
- Updated sitemap.xml
- No more clawdbot references in any content files

--- a/ai-powered-payment-automation-dengan-openclaw-dan-vps.html
+++ b/ai-powered-payment-automation-dengan-openclaw-dan-vps.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Powered Payment Automation dengan Clawdbot + VPS: Technical Architecture | dibayar.in</title>
+    <title>AI-Powered Payment Automation dengan openclaw + VPS: Technical Architecture | dibayar.in</title>
     <meta name="description"
-        content="Pelajari technical architecture AI-powered payment automation dengan Clawdbot dan VPS. Implementasi scalable payment system dengan AI intelligence untuk bisnis.">
+        content="Pelajari technical architecture AI-powered payment automation dengan openclaw dan VPS. Implementasi scalable payment system dengan AI intelligence untuk bisnis.">
     <meta name="keywords"
-        content="AI payment automation, Clawdbot architecture, payment system design, VPS untuk payment, scalable payment bot">
+        content="AI payment automation, openclaw architecture, payment system design, VPS untuk payment, scalable payment bot">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://dibayar.in/ai-powered-payment-automation-dengan-clawdbot-dan-vps.html">
+    <link rel="canonical" href="https://dibayar.in/ai-powered-payment-automation-dengan-openclaw-dan-vps.html">
     <meta name="author" content="dibayar.in">
 
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://dibayar.in/ai-powered-payment-automation-dengan-clawdbot-dan-vps.html">
-    <meta property="og:title" content="AI-Powered Payment Automation dengan Clawdbot + VPS: Technical Architecture">
+    <meta property="og:url" content="https://dibayar.in/ai-powered-payment-automation-dengan-openclaw-dan-vps.html">
+    <meta property="og:title" content="AI-Powered Payment Automation dengan openclaw + VPS: Technical Architecture">
     <meta property="og:description"
-        content="Technical architecture untuk AI-powered payment automation dengan Clawdbot.">
+        content="Technical architecture untuk AI-powered payment automation dengan openclaw.">
     <meta property="og:locale" content="id_ID">
 
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "AI-Powered Payment Automation dengan Clawdbot + VPS: Technical Architecture",
+        "headline": "AI-Powered Payment Automation dengan openclaw + VPS: Technical Architecture",
         "author": { "@type": "Organization", "name": "dibayar.in" },
         "publisher": { "@type": "Organization", "name": "dibayar.in" },
         "datePublished": "2025-01-27",
@@ -236,20 +236,20 @@
         <a href="index.html" class="logo">dibayar<span>.in</span></a>
 
         <nav class="breadcrumb">
-            <a href="index.html">Home</a> › <a href="apa-itu-clawdbot-dan-fungsinya.html">ClawdBot</a> › AI-Powered
+            <a href="index.html">Home</a> › <a href="apa-itu-openclaw-dan-fungsinya.html">openclaw</a> › AI-Powered
             Payment Architecture
         </nav>
 
-        <h1>AI-Powered Payment Automation dengan Clawdbot + VPS: Technical Architecture</h1>
+        <h1>AI-Powered Payment Automation dengan openclaw + VPS: Technical Architecture</h1>
         <p>
-            <strong>AI-powered payment automation</strong> dengan Clawdbot menggabungkan kecerdasan AI, cloud infrastructure,
+            <strong>AI-powered payment automation</strong> dengan openclaw menggabungkan kecerdasan AI, cloud infrastructure,
             dan payment gateway integration untuk menciptakan sistem pembayaran yang tidak hanya efisien tapi juga
             intelligent dan scalable. Pelajari technical architecture lengkapnya di sini.
         </p>
 
         <div class="highlight-box">
             <strong>💡 Why AI-Powered Payment?</strong> Traditional payment bots hanya follow rules. AI-powered payment
-            system dengan Clawdbot bisa <strong>understand context, handle edge cases, make intelligent decisions</strong>,
+            system dengan openclaw bisa <strong>understand context, handle edge cases, make intelligent decisions</strong>,
             dan provide personalized customer experience.
         </div>
 
@@ -264,7 +264,7 @@
                 <p>Nginx/HAProxy - SSL termination, rate limiting, request routing, DDoS protection</p>
             </div>
             <div class="arch-layer">
-                <strong>🤖 LAYER 3: Clawdbot AI Engine (Core)</strong>
+                <strong>🤖 LAYER 3: openclaw AI Engine (Core)</strong>
                 <p>Payment processing dengan AI intelligence, decision making, natural language understanding</p>
             </div>
             <div class="arch-layer">
@@ -287,9 +287,9 @@
 
         <h2>Core Components Deep Dive</h2>
 
-        <h3>1. Clawdbot AI Engine</h3>
+        <h3>1. openclaw AI Engine</h3>
         <p>
-            <strong>Brain dari payment automation system.</strong> Clawdbot bertugas:
+            <strong>Brain dari payment automation system.</strong> openclaw bertugas:
         </p>
         <ul>
             <li><strong>Natural Language Processing:</strong> Understand customer queries dalam bahasa natural</li>
@@ -350,7 +350,7 @@
         <h3>Scenario: Customer Makes Payment</h3>
         <ol>
             <li><strong>Customer Request:</strong> Customer kirim pesan "Saya mau bayar invoice #12345"</li>
-            <li><strong>AI Processing:</strong> Clawdbot parse intent, extract invoice number</li>
+            <li><strong>AI Processing:</strong> openclaw parse intent, extract invoice number</li>
             <li><strong>Database Query:</strong> Fetch invoice details dari database</li>
             <li><strong>Payment Request:</strong> Generate payment link/instruksi</li>
             <li><strong>Notification:</strong> Kirim payment instructions ke customer</li>
@@ -461,7 +461,7 @@
         <div class="cta-box">
             <strong>Butuh Infrastruktur untuk AI-Powered Payment System?</strong>
             <p style="margin-top:8px;margin-bottom:0;">
-                Implementasi AI-powered payment automation dengan Clawdbot membutuhkan VPS, API keys, dan
+                Implementasi AI-powered payment automation dengan openclaw membutuhkan VPS, API keys, dan
                 infrastruktur cloud lainnya. Jika Anda tidak punya kartu kredit untuk procurement, <strong>dibayar.in</strong>
                 siap membantu!
             </p>
@@ -478,10 +478,10 @@
         <div class="related">
             <h3>Artikel Terkait</h3>
             <div class="related-links">
-                <a href="apa-itu-clawdbot-dan-fungsinya.html">Apa Itu Clawdbot dan Fungsinya</a>
-                <a href="clawdbot-untuk-automasi-payment.html">Clawdbot untuk Automasi Payment</a>
-                <a href="setup-self-hosted-clawdbot-payment-bot-di-vps-linux.html">Setup Payment Bot di VPS Linux</a>
-                <a href="kebutuhan-vps-dan-api-untuk-clawdbot.html">Kebutuhan VPS dan API untuk ClawdBot</a>
+                <a href="apa-itu-openclaw-dan-fungsinya.html">Apa Itu openclaw dan Fungsinya</a>
+                <a href="openclaw-untuk-automasi-payment.html">openclaw untuk Automasi Payment</a>
+                <a href="setup-self-hosted-openclaw-payment-bot-di-vps-linux.html">Setup Payment Bot di VPS Linux</a>
+                <a href="kebutuhan-vps-dan-api-untuk-openclaw.html">Kebutuhan VPS dan API untuk openclaw</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
             </div>
         </div>
