--- a/apa-itu-openclaw-dan-fungsinya.html
+++ b/apa-itu-openclaw-dan-fungsinya.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apa itu Clawdbot? Penjelasan Lengkap AI Personal Assistant terbaru 2026 | dibayar.in</title>
+    <title>Apa itu openclaw? Penjelasan Lengkap AI Personal Assistant terbaru 2026 | dibayar.in</title>
     <meta name="description"
-        content="Apa itu Clawdbot? AI personal assistant terbaru 2026 yang viral di Silicon Valley. Pelajari fitur, cara kerja, dan kegunaan Clawdbot untuk automasi tugas harian Anda.">
+        content="Apa itu openclaw? AI personal assistant terbaru 2026 yang viral di Silicon Valley. Pelajari fitur, cara kerja, dan kegunaan openclaw untuk automasi tugas harian Anda.">
     <meta name="keywords"
-        content="apa itu Clawdbot, Clawdbot 2026, AI personal assistant, Clawdbot viral, automasi AI, Clawdbot Indonesia, AI assistant terbaru">
+        content="apa itu openclaw, openclaw 2026, AI personal assistant, openclaw viral, automasi AI, openclaw Indonesia, AI assistant terbaru">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://dibayar.in/apa-itu-clawdbot-dan-fungsinya.html">
+    <link rel="canonical" href="https://dibayar.in/apa-itu-openclaw-dan-fungsinya.html">
     <meta name="author" content="dibayar.in">
 
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://dibayar.in/apa-itu-clawdbot-dan-fungsinya.html">
-    <meta property="og:title" content="Apa itu Clawdbot? Penjelasan Lengkap AI Personal Assistant terbaru 2026">
+    <meta property="og:url" content="https://dibayar.in/apa-itu-openclaw-dan-fungsinya.html">
+    <meta property="og:title" content="Apa itu openclaw? Penjelasan Lengkap AI Personal Assistant terbaru 2026">
     <meta property="og:description"
-        content="Clawdbot adalah AI personal assistant terbaru 2026 yang viral. Pelajari fitur lengkap dan cara kerjanya.">
+        content="openclaw adalah AI personal assistant terbaru 2026 yang viral. Pelajari fitur lengkap dan cara kerjanya.">
     <meta property="og:locale" content="id_ID">
 
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "Apa itu Clawdbot? Penjelasan Lengkap AI Personal Assistant terbaru 2026",
+        "headline": "Apa itu openclaw? Penjelasan Lengkap AI Personal Assistant terbaru 2026",
         "author": { "@type": "Organization", "name": "dibayar.in" },
         "publisher": { "@type": "Organization", "name": "dibayar.in" },
         "datePublished": "2025-01-27",
@@ -205,25 +205,25 @@
 
         <nav class="breadcrumb">
             <a href="index.html">Home</a> › <a href="jasa-bayar-semua-platform-ai-tanpa-kartu-kredit.html">AI Tools</a> ›
-            Apa Itu ClawdBot
+            Apa Itu openclaw
         </nav>
 
-        <h1>Apa itu Clawdbot? Penjelasan Lengkap AI Personal Assistant terbaru 2026</h1>
+        <h1>Apa itu openclaw? Penjelasan Lengkap AI Personal Assistant terbaru 2026</h1>
         <p>
-            <strong>Clawdbot</strong> adalah AI personal assistant terbaru 2026 yang sedang viral di kalangan
+            <strong>openclaw</strong> adalah AI personal assistant terbaru 2026 yang sedang viral di kalangan
             tech enthusiast dan profesional, terutama di Silicon Valley. Dikembangkan oleh Peter Steinberger,
-            Clawdbot adalah <strong>open-source AI agent</strong> yang berjalan secara <em>local-first</em> dan
+            openclaw adalah <strong>open-source AI agent</strong> yang berjalan secara <em>local-first</em> dan
             bisa melakukan automasi tugas jauh lebih canggih daripada chatbot tradisional seperti ChatGPT atau Claude.
         </p>
 
         <div class="highlight-box">
-            <strong>🚀 Trending 2026:</strong> Clawdbot menjadi phenomenon di awal 2026 karena menunjukkan
+            <strong>🚀 Trending 2026:</strong> openclaw menjadi phenomenon di awal 2026 karena menunjukkan
             masa depan <strong>AI agent</strong> yang benar-benar bisa bekerja otonom, bukan sekadar chat.
             Tech community menyebutnya sebagai "Jarvis untuk masa depan" - AI assistant yang bisa melakukan
             tugas nyata, bukan hanya menjawab pertanyaan.
         </div>
 
-        <h2>Fungsi Utama ClawdBot</h2>
+        <h2>Fungsi Utama openclaw</h2>
         <div class="feature-grid">
             <div class="feature-card">
                 <strong>🤖 Personal AI Assistant</strong>
@@ -251,10 +251,10 @@
             </div>
         </div>
 
-        <h2>Perbedaan ClawdBot dengan ChatGPT Biasa</h2>
+        <h2>Perbedaan openclaw dengan ChatGPT Biasa</h2>
         <p>
             ChatGPT atau Claude adalah chatbot yang hanya bisa menjawab pertanyaan dan memberikan saran.
-            <strong>ClawdBot berbeda</strong> karena:
+            <strong>openclaw berbeda</strong> karena:
         </p>
         <ul>
             <li><strong>Berjalan secara lokal</strong> - Data tetap di device Anda, lebih privat</li>
@@ -264,9 +264,9 @@
             <li><strong>Open-source</strong> - Gratis digunakan dan bisa dikustomisasi sesuai kebutuhan</li>
         </ul>
 
-        <h2>Contoh Penggunaan ClawdBot</h2>
+        <h2>Contoh Penggunaan openclaw</h2>
         <p>
-            Dengan ClawdBot, Anda bisa meminta AI untuk melakukan tugas-tugas seperti:
+            Dengan openclaw, Anda bisa meminta AI untuk melakukan tugas-tugas seperti:
         </p>
         <ul>
             <li>📅 "Jadwalkan meeting dengan client besok jam 2 siang dan kirim undangan via email"</li>
@@ -276,9 +276,9 @@
             <li>🗂️ "Organisir file download saya ke folder-folder sesuai type"</li>
         </ul>
 
-        <h2>Integrasi ClawdBot dengan LLM</h2>
+        <h2>Integrasi openclaw dengan LLM</h2>
         <p>
-            ClawdBot sendiri adalah framework/gateway. Untuk berpikir dan merespons, ClawdBot membutuhkan
+            openclaw sendiri adalah framework/gateway. Untuk berpikir dan merespons, openclaw membutuhkan
             <strong>Large Language Model (LLM)</strong> seperti:
         </p>
         <ul>
@@ -287,9 +287,9 @@
             <li><strong>Open-source LLM</strong> - Bisa menggunakan model lokal seperti Llama, Mistral, dll</li>
         </ul>
 
-        <h2>Kenapa ClawdBot Sedang Viral?</h2>
+        <h2>Kenapa openclaw Sedang Viral?</h2>
         <p>
-            ClawdBot mendapat perhatian luas karena konsepnya yang revolusioner:
+            openclaw mendapat perhatian luas karena konsepnya yang revolusioner:
         </p>
         <ul>
             <li>✅ Menunjukkan masa depan <strong>AI agent</strong> yang benar-benar bisa bekerja untuk kita</li>
@@ -299,24 +299,24 @@
             <li>✅ <strong>Mudah di-customize</strong> - Bisa dibuat untuk berbagai use case spesifik</li>
         </ul>
 
-        <h2>Apakah ClawdBot Aman?</h2>
+        <h2>Apakah openclaw Aman?</h2>
         <p>
-            Karena ClawdBot memiliki akses luas ke sistem Anda, ada beberapa pertimbangan keamanan:
+            Karena openclaw memiliki akses luas ke sistem Anda, ada beberapa pertimbangan keamanan:
         </p>
         <ul>
-            <li>⚠️ Pastikan device yang menjalankan ClawdBot aman dan terlindungi password</li>
+            <li>⚠️ Pastikan device yang menjalankan openclaw aman dan terlindungi password</li>
             <li>⚠️ Jangan memberikan akses ke data sensitif jika belum sepenuhnya percaya</li>
             <li>⚠️ Gunakan environment terpisah jika akan mengintegrasikan dengan sistem produksi</li>
             <li>✅ Keuntungan: Data Anda tetap di device sendiri, tidak di server pihak ketiga</li>
         </ul>
 
         <div class="cta-box">
-            <strong>Butuh API Key atau VPS untuk Menjalankan ClawdBot?</strong>
+            <strong>Butuh API Key atau VPS untuk Menjalankan openclaw?</strong>
             <p style="margin-top:8px;margin-bottom:0;">
-                ClawdBot membutuhkan API key dari OpenAI atau Claude, dan mungkin VPS untuk operasional 24/7.
+                openclaw membutuhkan API key dari OpenAI atau Claude, dan mungkin VPS untuk operasional 24/7.
                 Jika Anda tidak punya kartu kredit untuk langganan atau sewa VPS, <strong>dibayar.in</strong> bisa membantu!
             </p>
-            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20OpenAI%2FClaude%20dan%2Fatau%20sewa%20VPS%20untuk%20ClawdBot%20via%20dibayar.in"
+            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20OpenAI%2FClaude%20dan%2Fatau%20sewa%20VPS%20untuk%20openclaw%20via%20dibayar.in"
                 class="btn-wa" target="_blank" rel="noopener noreferrer">
                 Chat Admin - Beli API Key & VPS
             </a>
@@ -327,12 +327,12 @@
         </div>
 
         <div class="related">
-            <h3>Artikel Terkait ClawdBot</h3>
+            <h3>Artikel Terkait openclaw</h3>
             <div class="related-links">
-                <a href="cara-install-dan-setup-clawdbot.html">Cara Install dan Setup ClawdBot</a>
-                <a href="clawdbot-untuk-produktivitas-dan-automasi.html">ClawdBot untuk Produktivitas</a>
-                <a href="kebutuhan-vps-dan-api-untuk-clawdbot.html">Kebutuhan VPS dan API untuk ClawdBot</a>
-                <a href="cara-bayar-vps-dan-api-ai-untuk-clawdbot.html">Cara Bayar VPS & API AI untuk ClawdBot</a>
+                <a href="cara-install-dan-setup-openclaw.html">Cara Install dan Setup openclaw</a>
+                <a href="openclaw-untuk-produktivitas-dan-automasi.html">openclaw untuk Produktivitas</a>
+                <a href="kebutuhan-vps-dan-api-untuk-openclaw.html">Kebutuhan VPS dan API untuk openclaw</a>
+                <a href="cara-bayar-vps-dan-api-ai-untuk-openclaw.html">Cara Bayar VPS & API AI untuk openclaw</a>
                 <a href="jasa-bayar-semua-platform-ai-tanpa-kartu-kredit.html">Jasa Bayar AI Tools Tanpa Kartu Kredit</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
             </div>
