--- a/cara-bayar-vps-dan-api-ai-untuk-openclaw.html
+++ b/cara-bayar-vps-dan-api-ai-untuk-openclaw.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cara Bayar VPS dan API AI untuk ClawdBot Tanpa Kartu Kredit | dibayar.in</title>
+    <title>Cara Bayar VPS dan API AI untuk openclaw Tanpa Kartu Kredit | dibayar.in</title>
     <meta name="description"
-        content="Panduan cara bayar VPS dan API key (OpenAI, Claude) untuk ClawdBot tanpa kartu kredit. Gunakan jasa pembayaran dibayar.in, bisa bayar pakai QRIS atau transfer bank.">
+        content="Panduan cara bayar VPS dan API key (OpenAI, Claude) untuk openclaw tanpa kartu kredit. Gunakan jasa pembayaran dibayar.in, bisa bayar pakai QRIS atau transfer bank.">
     <meta name="keywords"
         content="bayar VPS tanpa kartu kredit, beli API key OpenAI tanpa kartu kredit, bayar Claude API Indonesia, jasa bayar VPS, jasa bayar API AI">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://dibayar.in/cara-bayar-vps-dan-api-ai-untuk-clawdbot.html">
+    <link rel="canonical" href="https://dibayar.in/cara-bayar-vps-dan-api-ai-untuk-openclaw.html">
     <meta name="author" content="dibayar.in">
 
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://dibayar.in/cara-bayar-vps-dan-api-ai-untuk-clawdbot.html">
-    <meta property="og:title" content="Cara Bayar VPS dan API AI untuk ClawdBot Tanpa Kartu Kredit">
+    <meta property="og:url" content="https://dibayar.in/cara-bayar-vps-dan-api-ai-untuk-openclaw.html">
+    <meta property="og:title" content="Cara Bayar VPS dan API AI untuk openclaw Tanpa Kartu Kredit">
     <meta property="og:description"
-        content="Solusi bayar VPS dan API key untuk ClawdBot tanpa kartu kredit internasional.">
+        content="Solusi bayar VPS dan API key untuk openclaw tanpa kartu kredit internasional.">
     <meta property="og:locale" content="id_ID">
 
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "Cara Bayar VPS dan API AI untuk ClawdBot Tanpa Kartu Kartu Kredit",
+        "headline": "Cara Bayar VPS dan API AI untuk openclaw Tanpa Kartu Kartu Kredit",
         "author": { "@type": "Organization", "name": "dibayar.in" },
         "publisher": { "@type": "Organization", "name": "dibayar.in" },
         "datePublished": "2025-01-27",
@@ -296,15 +296,15 @@
         <a href="index.html" class="logo">dibayar<span>.in</span></a>
 
         <nav class="breadcrumb">
-            <a href="index.html">Home</a> › <a href="apa-itu-clawdbot-dan-fungsinya.html">ClawdBot</a> › Cara Bayar
+            <a href="index.html">Home</a> › <a href="apa-itu-openclaw-dan-fungsinya.html">openclaw</a> › Cara Bayar
             VPS & API AI
         </nav>
 
-        <h1>Cara Bayar VPS dan API AI untuk ClawdBot Tanpa Kartu Kredit</h1>
+        <h1>Cara Bayar VPS dan API AI untuk openclaw Tanpa Kartu Kredit</h1>
         <p>
-            Ingin menjalankan <strong>ClawdBot</strong> tapi tidak punya kartu kredit internasional untuk membeli
+            Ingin menjalankan <strong>openclaw</strong> tapi tidak punya kartu kredit internasional untuk membeli
             API key (OpenAI/Claude) atau sewa VPS? Jangan khawatir! <strong>dibayar.in</strong> siap membantu
-            Anda mendapatkan semua kebutuhan infrastruktur ClawdBot tanpa perlu kartu kredit.
+            Anda mendapatkan semua kebutuhan infrastruktur openclaw tanpa perlu kartu kredit.
         </p>
 
         <div class="highlight-box">
@@ -315,11 +315,11 @@
 
         <h2>Tantangan Tanpa Kartu Kredit</h2>
         <p>
-            Untuk menjalankan ClawdBot secara optimal, Anda membutuhkan:
+            Untuk menjalankan openclaw secara optimal, Anda membutuhkan:
         </p>
         <ul>
             <li>🔑 <strong>API Key</strong> dari OpenAI atau Anthropic Claude</li>
-            <li>🖥️ <strong>VPS</strong> untuk menjalankan ClawdBot 24/7</li>
+            <li>🖥️ <strong>VPS</strong> untuk menjalankan openclaw 24/7</li>
         </ul>
         <p>
             Masalahnya, kedua layanan tersebut <strong>hanya menerima kartu kredit internasional</strong> sebagai
@@ -329,7 +329,7 @@
 
         <h2>Solusi: Jasa Pembayaran dibayar.in</h2>
         <p>
-            <strong>dibayar.in</strong> menyediakan jasa pembayaran untuk semua kebutuhan ClawdBot Anda:
+            <strong>dibayar.in</strong> menyediakan jasa pembayaran untuk semua kebutuhan openclaw Anda:
         </p>
 
         <div class="service-grid">
@@ -351,7 +351,7 @@
             <div class="service-card">
                 <div class="icon">⚙️</div>
                 <strong>Setup & Config</strong>
-                <p>Bantu setup dan konfigurasi server, API, dan ClawdBot siap pakai</p>
+                <p>Bantu setup dan konfigurasi server, API, dan openclaw siap pakai</p>
             </div>
         </div>
 
@@ -478,9 +478,9 @@
             server biasanya 1-2 jam. Semua bisa dikerjakan dalam hari yang sama.
         </p>
 
-        <h3>Apakah bisa minta bantuan setup ClawdBot juga?</h3>
+        <h3>Apakah bisa minta bantuan setup openclaw juga?</h3>
         <p>
-            Ya, kami bisa bantu setup dasar ClawdBot di VPS yang Anda sewa. Biaya setup terpisah dan bisa
+            Ya, kami bisa bantu setup dasar openclaw di VPS yang Anda sewa. Biaya setup terpisah dan bisa
             didiskusikan saat konsultasi.
         </p>
 
@@ -491,12 +491,12 @@
         </p>
 
         <div class="cta-box">
-            <strong>Siap Beli API Key atau Sewa VPS untuk ClawdBot?</strong>
+            <strong>Siap Beli API Key atau Sewa VPS untuk openclaw?</strong>
             <p style="margin-top:8px;margin-bottom:0;">
-                Jangan biarkan ketiadaan kartu kredit menghambat Anda dari menggunakan ClawdBot! Hubungi
+                Jangan biarkan ketiadaan kartu kredit menghambat Anda dari menggunakan openclaw! Hubungi
                 <strong>dibayar.in</strong> sekarang dan dapatkan semua infrastruktur yang dibutuhkan.
             </p>
-            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20atau%20sewa%20VPS%20untuk%20ClawdBot%20via%20dibayar.in"
+            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20atau%20sewa%20VPS%20untuk%20openclaw%20via%20dibayar.in"
                 class="btn-wa" target="_blank" rel="noopener noreferrer">
                 Chat Admin - Beli API Key & VPS
             </a>
@@ -509,10 +509,10 @@
         <div class="related">
             <h3>Artikel Terkait</h3>
             <div class="related-links">
-                <a href="apa-itu-clawdbot-dan-fungsinya.html">Apa Itu ClawdBot dan Fungsinya</a>
-                <a href="cara-install-dan-setup-clawdbot.html">Cara Install dan Setup ClawdBot</a>
-                <a href="clawdbot-untuk-produktivitas-dan-automasi.html">ClawdBot untuk Produktivitas</a>
-                <a href="kebutuhan-vps-dan-api-untuk-clawdbot.html">Kebutuhan VPS dan API untuk ClawdBot</a>
+                <a href="apa-itu-openclaw-dan-fungsinya.html">Apa Itu openclaw dan Fungsinya</a>
+                <a href="cara-install-dan-setup-openclaw.html">Cara Install dan Setup openclaw</a>
+                <a href="openclaw-untuk-produktivitas-dan-automasi.html">openclaw untuk Produktivitas</a>
+                <a href="kebutuhan-vps-dan-api-untuk-openclaw.html">Kebutuhan VPS dan API untuk openclaw</a>
                 <a href="jasa-bayar-semua-platform-ai-tanpa-kartu-kredit.html">Jasa Bayar AI Tools</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
             </div>
