--- a/cara-install-dan-setup-openclaw.html
+++ b/cara-install-dan-setup-openclaw.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cara Install dan Setup ClawdBot di Windows, macOS, Linux | dibayar.in</title>
+    <title>Cara Install dan Setup openclaw di Windows, macOS, Linux | dibayar.in</title>
     <meta name="description"
-        content="Panduan lengkap cara install dan setup ClawdBot di Windows, macOS, dan Linux. Pelajari persyaratan sistem, langkah instalasi, konfigurasi API key, dan cara menjalankan ClawdBot.">
+        content="Panduan lengkap cara install dan setup openclaw di Windows, macOS, dan Linux. Pelajari persyaratan sistem, langkah instalasi, konfigurasi API key, dan cara menjalankan openclaw.">
     <meta name="keywords"
-        content="cara install ClawdBot, setup ClawdBot, instalasi ClawdBot, ClawdBot Windows, ClawdBot macOS, ClawdBot Linux">
+        content="cara install openclaw, setup openclaw, instalasi openclaw, openclaw Windows, openclaw macOS, openclaw Linux">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://dibayar.in/cara-install-dan-setup-clawdbot.html">
+    <link rel="canonical" href="https://dibayar.in/cara-install-dan-setup-openclaw.html">
     <meta name="author" content="dibayar.in">
 
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://dibayar.in/cara-install-dan-setup-clawdbot.html">
-    <meta property="og:title" content="Cara Install dan Setup ClawdBot di Windows, macOS, Linux">
+    <meta property="og:url" content="https://dibayar.in/cara-install-dan-setup-openclaw.html">
+    <meta property="og:title" content="Cara Install dan Setup openclaw di Windows, macOS, Linux">
     <meta property="og:description"
-        content="Panduan lengkap instalasi ClawdBot dari awal sampai siap digunakan.">
+        content="Panduan lengkap instalasi openclaw dari awal sampai siap digunakan.">
     <meta property="og:locale" content="id_ID">
     <meta property="og:image" content="https://dibayar.in/ogimage.jpg">
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "Cara Install dan Setup ClawdBot di Windows, macOS, Linux",
+        "headline": "Cara Install dan Setup openclaw di Windows, macOS, Linux",
         "author": { "@type": "Organization", "name": "dibayar.in" },
         "publisher": { "@type": "Organization", "name": "dibayar.in" },
         "datePublished": "2025-01-27",
@@ -43,23 +43,23 @@
         "mainEntity": [
             {
                 "@type": "Question",
-                "name": "Apakah ClawdBot gratis?",
+                "name": "Apakah openclaw gratis?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "Ya, ClawdBot adalah open-source dan gratis digunakan. Namun Anda membutuhkan API key dari OpenAI atau Claude yang berbayar sesuai penggunaan."
+                    "text": "Ya, openclaw adalah open-source dan gratis digunakan. Namun Anda membutuhkan API key dari OpenAI atau Claude yang berbayar sesuai penggunaan."
                 }
             },
             {
                 "@type": "Question",
-                "name": "Apakah perlu skill coding untuk install ClawdBot?",
+                "name": "Apakah perlu skill coding untuk install openclaw?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "ClawdBot dirancang accessible untuk non-engineer, namun sedikit familiarity dengan terminal/command line akan sangat membantu."
+                    "text": "openclaw dirancang accessible untuk non-engineer, namun sedikit familiarity dengan terminal/command line akan sangat membantu."
                 }
             },
             {
                 "@type": "Question",
-                "name": "Di mana ClawdBot sebaiknya dijalankan?",
+                "name": "Di mana openclaw sebaiknya dijalankan?",
                 "acceptedAnswer": {
                     "@type": "Answer",
                     "text": "Bisa di laptop/PC pribadi, Mac Mini, atau VPS cloud untuk operasional 24/7. Pilihan terbaik tergantung kebutuhan dan budget."
@@ -277,25 +277,25 @@
         <a href="index.html" class="logo">dibayar<span>.in</span></a>
 
         <nav class="breadcrumb">
-            <a href="index.html">Home</a> › <a href="apa-itu-clawdbot-dan-fungsinya.html">ClawdBot</a> › Cara
-            Install ClawdBot
+            <a href="index.html">Home</a> › <a href="apa-itu-openclaw-dan-fungsinya.html">openclaw</a> › Cara
+            Install openclaw
         </nav>
 
-        <h1>Cara Install dan Setup ClawdBot di Windows, macOS, Linux</h1>
+        <h1>Cara Install dan Setup openclaw di Windows, macOS, Linux</h1>
         <p>
-            <strong>ClawdBot</strong> adalah AI assistant open-source yang bisa Anda install dan jalankan sendiri.
-            Dalam panduan ini, kita akan bahas langkah-langkah lengkap cara install dan setup ClawdBot dari awal
+            <strong>openclaw</strong> adalah AI assistant open-source yang bisa Anda install dan jalankan sendiri.
+            Dalam panduan ini, kita akan bahas langkah-langkah lengkap cara install dan setup openclaw dari awal
             sampai siap digunakan di Windows, macOS, dan Linux.
         </p>
 
         <div class="highlight-box">
             <strong>💡 Sebelum Mulai:</strong> Pastikan Anda sudah memiliki API key dari OpenAI (GPT-4) atau
-            Anthropic (Claude). Jika belum, <a href="kebutuhan-vps-dan-api-untuk-clawdbot.html">baca panduan mendapatkan API key</a>.
+            Anthropic (Claude). Jika belum, <a href="kebutuhan-vps-dan-api-untuk-openclaw.html">baca panduan mendapatkan API key</a>.
         </div>
 
         <h2>Persyaratan Sistem</h2>
         <p>
-            ClawdBot bisa berjalan di berbagai platform dengan spesifikasi minimal:
+            openclaw bisa berjalan di berbagai platform dengan spesifikasi minimal:
         </p>
         <ul>
             <li><strong>OS:</strong> Windows 10+, macOS 12+, atau Linux (Ubuntu/Debian recommended)</li>
@@ -305,14 +305,14 @@
             <li><strong>Terminal/Command Line:</strong> Untuk menjalankan perintah instalasi</li>
         </ul>
 
-        <h2>Metode Instalasi ClawdBot</h2>
+        <h2>Metode Instalasi openclaw</h2>
         <p>
-            Ada beberapa cara untuk menginstall ClawdBot:
+            Ada beberapa cara untuk menginstall openclaw:
         </p>
 
         <h3>Metode 1: Install Script (Paling Mudah)</h3>
         <p>
-            ClawdBot menyediakan script instalasi otomatis yang bisa dijalankan dengan satu perintah.
+            openclaw menyediakan script instalasi otomatis yang bisa dijalankan dengan satu perintah.
             Buka terminal atau command prompt dan jalankan:
         </p>
         <code>curl -fsSL https://clawd.bot/install.sh | bash</code>
@@ -322,7 +322,7 @@
 
         <div class="warning-box">
             <strong>⚠️ Security Note:</strong> Sebelum menjalankan install script dari internet, pastikan Anda
-            mempercayai sumbernya. Selalu cek dokumentasi resmi di repository GitHub ClawdBot.
+            mempercayai sumbernya. Selalu cek dokumentasi resmi di repository GitHub openclaw.
         </div>
 
         <h3>Metode 2: Manual Install dari GitHub</h3>
@@ -330,13 +330,13 @@
             Untuk kontrol lebih penuh, Anda bisa clone repository dan install secara manual:
         </p>
         <ol>
-            <li>Clone repository ClawdBot dari GitHub</li>
+            <li>Clone repository openclaw dari GitHub</li>
             <li>Install dependensi (Python, Node.js, atau yang dibutuhkan)</li>
             <li>Setup konfigurasi awal</li>
-            <li>Run ClawdBot dengan perintah yang sesuai</li>
+            <li>Run openclaw dengan perintah yang sesuai</li>
         </ol>
 
-        <h2>Langkah-Langkah Setup ClawdBot</h2>
+        <h2>Langkah-Langkah Setup openclaw</h2>
         <div class="steps-container">
             <div class="step">
                 <div class="step-number">1</div>
@@ -348,8 +348,8 @@
             <div class="step">
                 <div class="step-number">2</div>
                 <div class="step-content">
-                    <h4>Download ClawdBot</h4>
-                    <p>Jalankan install script atau clone repository dari GitHub resmi ClawdBot</p>
+                    <h4>Download openclaw</h4>
+                    <p>Jalankan install script atau clone repository dari GitHub resmi openclaw</p>
                 </div>
             </div>
             <div class="step">
@@ -370,7 +370,7 @@
                 <div class="step-number">5</div>
                 <div class="step-content">
                     <h4>Test Run</h4>
-                    <p>Jalankan ClawdBot dan test dengan perintah sederhana untuk memastikan everything works</p>
+                    <p>Jalankan openclaw dan test dengan perintah sederhana untuk memastikan everything works</p>
                 </div>
             </div>
             <div class="step">
@@ -384,7 +384,7 @@
 
         <h2>Setup Platform Chat Integration</h2>
         <p>
-            ClawdBot bisa diintegrasikan dengan berbagai platform messaging. Pilih yang paling cocok untuk Anda:
+            openclaw bisa diintegrasikan dengan berbagai platform messaging. Pilih yang paling cocok untuk Anda:
         </p>
         <ul>
             <li><strong>WhatsApp:</strong> Perlu setup WhatsApp Business API atau third-party connector</li>
@@ -401,15 +401,15 @@
         <ul>
             <li>🔑 <strong>API Keys:</strong> Masukkan OpenAI API key atau Anthropic API key</li>
             <li>🧠 <strong>Model Selection:</strong> Pilih model yang ingin digunakan (GPT-4, Claude 3, dll)</li>
-            <li>📝 <strong>System Prompt:</strong> Definisikan personality dan kemampuan ClawdBot</li>
-            <li>🔐 <strong>Permissions:</strong> Atur apa saja yang boleh diakses oleh ClawdBot</li>
+            <li>📝 <strong>System Prompt:</strong> Definisikan personality dan kemampuan openclaw</li>
+            <li>🔐 <strong>Permissions:</strong> Atur apa saja yang boleh diakses oleh openclaw</li>
             <li>📊 <strong>Logging:</strong> Setup logging untuk monitoring dan debugging</li>
         </ul>
 
-        <h2>Menjalankan ClawdBot</h2>
+        <h2>Menjalankan openclaw</h2>
         <p>
-            Setelah setup selesai, jalankan ClawdBot dengan perintah yang sesuai (biasanya <code>npm start</code>,
-            <code>python main.py</code>, atau perintah spesifik lain tergantung implementasi). ClawdBot akan mulai
+            Setelah setup selesai, jalankan openclaw dengan perintah yang sesuai (biasanya <code>npm start</code>,
+            <code>python main.py</code>, atau perintah spesifik lain tergantung implementasi). openclaw akan mulai
             mendengkir perintah dari platform chat yang sudah dikonfigurasi.
         </p>
 
@@ -422,33 +422,33 @@
             <li>✅ Baca dokumentasi dan join komunitas untuk bantuan</li>
         </ul>
 
-        <h2>FAQ Instalasi ClawdBot</h2>
+        <h2>FAQ Instalasi openclaw</h2>
 
-        <h3>Apakah ClawdBot gratis digunakan?</h3>
+        <h3>Apakah openclaw gratis digunakan?</h3>
         <p>
-            Ya, ClawdBot adalah software open-source dan gratis. Namun, Anda membutuhkan API key dari OpenAI
-            atau Anthropic yang berbayar sesuai penggunaan. Biaya API tergantung seberapa sering ClawdBot digunakan.
+            Ya, openclaw adalah software open-source dan gratis. Namun, Anda membutuhkan API key dari OpenAI
+            atau Anthropic yang berbayar sesuai penggunaan. Biaya API tergantung seberapa sering openclaw digunakan.
         </p>
 
-        <h3>Apakah perlu skill coding untuk install ClawdBot?</h3>
+        <h3>Apakah perlu skill coding untuk install openclaw?</h3>
         <p>
-            ClawdBot dirancang untuk bisa diakses oleh non-engineer, namun sedikit familiarity dengan terminal
+            openclaw dirancang untuk bisa diakses oleh non-engineer, namun sedikit familiarity dengan terminal
             atau command line akan sangat membantu. Ada banyak tutorial dan komunitas yang siap membantu.
         </p>
 
-        <h3>Di mana sebaiknya ClawdBot dijalankan?</h3>
+        <h3>Di mana sebaiknya openclaw dijalankan?</h3>
         <p>
             Bisa di laptop/PC pribadi untuk penggunaan personal, atau di VPS/cloud seperti Mac Mini untuk
             operasional 24/7. Pilihan terbaik tergantung kebutuhan dan budget Anda.
         </p>
 
         <div class="cta-box">
-            <strong>Butuh API Key atau VPS untuk ClawdBot?</strong>
+            <strong>Butuh API Key atau VPS untuk openclaw?</strong>
             <p style="margin-top:8px;margin-bottom:0;">
-                Untuk menjalankan ClawdBot, Anda memerlukan API key dari OpenAI/Claude dan mungkin VPS.
+                Untuk menjalankan openclaw, Anda memerlukan API key dari OpenAI/Claude dan mungkin VPS.
                 Jika tidak punya kartu kredit untuk pembelian tersebut, <strong>dibayar.in</strong> siap membantu!
             </p>
-            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20atau%20sewa%20VPS%20untuk%20ClawdBot%20via%20dibayar.in"
+            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20atau%20sewa%20VPS%20untuk%20openclaw%20via%20dibayar.in"
                 class="btn-wa" target="_blank" rel="noopener noreferrer">
                 Chat Admin - Beli API Key & VPS
             </a>
@@ -461,10 +461,10 @@
         <div class="related">
             <h3>Artikel Terkait</h3>
             <div class="related-links">
-                <a href="apa-itu-clawdbot-dan-fungsinya.html">Apa Itu ClawdBot dan Fungsinya</a>
-                <a href="clawdbot-untuk-produktivitas-dan-automasi.html">ClawdBot untuk Produktivitas</a>
-                <a href="kebutuhan-vps-dan-api-untuk-clawdbot.html">Kebutuhan VPS dan API untuk ClawdBot</a>
-                <a href="cara-bayar-vps-dan-api-ai-untuk-clawdbot.html">Cara Bayar VPS & API AI</a>
+                <a href="apa-itu-openclaw-dan-fungsinya.html">Apa Itu openclaw dan Fungsinya</a>
+                <a href="openclaw-untuk-produktivitas-dan-automasi.html">openclaw untuk Produktivitas</a>
+                <a href="kebutuhan-vps-dan-api-untuk-openclaw.html">Kebutuhan VPS dan API untuk openclaw</a>
+                <a href="cara-bayar-vps-dan-api-ai-untuk-openclaw.html">Cara Bayar VPS & API AI</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
             </div>
         </div>
