--- a/cara-setup-vps-untuk-bot-telegram.html
+++ b/cara-setup-vps-untuk-bot-telegram.html
@@ -507,8 +507,8 @@ WantedBy=multi-user.target
                 <a href="vps-murah-untuk-bot-10-provider-indonesia-termurah.html">VPS Murah untuk Bot</a>
                 <a href="vps-untuk-payment-bot.html">VPS untuk Payment Bot</a>
                 <a href="bot-whatsapp-automation-di-vps.html">Bot WhatsApp Automation di VPS</a>
-                <a href="apa-itu-clawdbot-dan-fungsinya.html">Apa Itu Clawdbot</a>
-                <a href="cara-bayar-vps-dan-api-ai-untuk-clawdbot.html">Cara Bayar VPS & API AI</a>
+                <a href="apa-itu-openclaw-dan-fungsinya.html">Apa Itu openclaw</a>
+                <a href="cara-bayar-vps-dan-api-ai-untuk-openclaw.html">Cara Bayar VPS & API AI</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
             </div>
         </div>
