--- a/kebutuhan-vps-dan-api-untuk-openclaw.html
+++ b/kebutuhan-vps-dan-api-untuk-openclaw.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kebutuhan VPS dan API untuk Menjalankan ClawdBot | dibayar.in</title>
+    <title>Kebutuhan VPS dan API untuk Menjalankan openclaw | dibayar.in</title>
     <meta name="description"
-        content="Pelajari kebutuhan VPS dan API key untuk menjalankan ClawdBot. Rekomendasi spesifikasi server, pilihan provider, dan panduan mendapatkan API key OpenAI/Claude.">
+        content="Pelajari kebutuhan VPS dan API key untuk menjalankan openclaw. Rekomendasi spesifikasi server, pilihan provider, dan panduan mendapatkan API key OpenAI/Claude.">
     <meta name="keywords"
-        content="VPS untuk ClawdBot, API ClawdBot, spesifikasi server ClawdBot, hosting ClawdBot, OpenAI API, Claude API">
+        content="VPS untuk openclaw, API openclaw, spesifikasi server openclaw, hosting openclaw, OpenAI API, Claude API">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://dibayar.in/kebutuhan-vps-dan-api-untuk-clawdbot.html">
+    <link rel="canonical" href="https://dibayar.in/kebutuhan-vps-dan-api-untuk-openclaw.html">
     <meta name="author" content="dibayar.in">
 
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://dibayar.in/kebutuhan-vps-dan-api-untuk-clawdbot.html">
-    <meta property="og:title" content="Kebutuhan VPS dan API untuk Menjalankan ClawdBot">
+    <meta property="og:url" content="https://dibayar.in/kebutuhan-vps-dan-api-untuk-openclaw.html">
+    <meta property="og:title" content="Kebutuhan VPS dan API untuk Menjalankan openclaw">
     <meta property="og:description"
-        content="Panduan lengkap kebutuhan infrastruktur dan API untuk menjalankan ClawdBot.">
+        content="Panduan lengkap kebutuhan infrastruktur dan API untuk menjalankan openclaw.">
     <meta property="og:locale" content="id_ID">
 
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "Kebutuhan VPS dan API untuk Menjalankan ClawdBot",
+        "headline": "Kebutuhan VPS dan API untuk Menjalankan openclaw",
         "author": { "@type": "Organization", "name": "dibayar.in" },
         "publisher": { "@type": "Organization", "name": "dibayar.in" },
         "datePublished": "2025-01-27",
@@ -40,15 +40,15 @@
         "mainEntity": [
             {
                 "@type": "Question",
-                "name": "Apakah harus menggunakan VPS untuk ClawdBot?",
+                "name": "Apakah harus menggunakan VPS untuk openclaw?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "Tidak wajib. Anda bisa menjalankan ClawdBot di laptop/PC pribadi. Namun untuk operasional 24/7, VPS sangat disarankan agar ClawdBot selalu online."
+                    "text": "Tidak wajib. Anda bisa menjalankan openclaw di laptop/PC pribadi. Namun untuk operasional 24/7, VPS sangat disarankan agar openclaw selalu online."
                 }
             },
             {
                 "@type": "Question",
-                "name": "Berapa biaya API key untuk ClawdBot?",
+                "name": "Berapa biaya API key untuk openclaw?",
                 "acceptedAnswer": {
                     "@type": "Answer",
                     "text": "Biaya tergantung penggunaan. OpenAI GPT-4 sekitar $0.01-0.03 per 1K tokens. Untuk penggunaan personal moderate, perkiraan $20-100 per bulan."
@@ -56,7 +56,7 @@
             },
             {
                 "@type": "Question",
-                "name": "VPS mana yang terbaik untuk ClawdBot?",
+                "name": "VPS mana yang terbaik untuk openclaw?",
                 "acceptedAnswer": {
                     "@type": "Answer",
                     "text": "DigitalOcean, Linode, Vultr, atau Hetzner adalah pilihan populer. Pilih yang dekat dengan lokasi Anda dan sesuai budget."
@@ -273,19 +273,19 @@
         <a href="index.html" class="logo">dibayar<span>.in</span></a>
 
         <nav class="breadcrumb">
-            <a href="index.html">Home</a> › <a href="apa-itu-clawdbot-dan-fungsinya.html">ClawdBot</a> › Kebutuhan
+            <a href="index.html">Home</a> › <a href="apa-itu-openclaw-dan-fungsinya.html">openclaw</a> › Kebutuhan
             VPS & API
         </nav>
 
-        <h1>Kebutuhan VPS dan API untuk Menjalankan ClawdBot</h1>
+        <h1>Kebutuhan VPS dan API untuk Menjalankan openclaw</h1>
         <p>
-            Untuk menjalankan <strong>ClawdBot</strong> dengan optimal, Anda membutuhkan dua komponen utama:
-            <strong>VPS (Virtual Private Server)</strong> sebagai tempat ClawdBot berjalan, dan <strong>API key</strong>
+            Untuk menjalankan <strong>openclaw</strong> dengan optimal, Anda membutuhkan dua komponen utama:
+            <strong>VPS (Virtual Private Server)</strong> sebagai tempat openclaw berjalan, dan <strong>API key</strong>
             dari provider LLM seperti OpenAI atau Anthropic untuk kemampuan berpikir dan merespons.
         </p>
 
         <div class="highlight-box">
-            <strong>💡 Quick Info:</strong> ClawdBot adalah open-source dan gratis, tapi Anda perlu membayar
+            <strong>💡 Quick Info:</strong> openclaw adalah open-source dan gratis, tapi Anda perlu membayar
             untuk VPS (sekitar $5-20/bulan) dan API usage (tergantung seberapa sering digunakan, biasanya $20-100/bulan).
         </div>
 
@@ -333,7 +333,7 @@
             </table>
         </div>
 
-        <h2>Spesifikasi VPS untuk ClawdBot</h2>
+        <h2>Spesifikasi VPS untuk openclaw</h2>
         <div class="spec-grid">
             <div class="spec-card">
                 <div class="icon">💾</div>
@@ -357,9 +357,9 @@
             </div>
         </div>
 
-        <h2>Rekomendasi Provider VPS untuk ClawdBot</h2>
+        <h2>Rekomendasi Provider VPS untuk openclaw</h2>
         <p>
-            Beberapa provider VPS yang populer dan cocok untuk menjalankan ClawdBot:
+            Beberapa provider VPS yang populer dan cocok untuk menjalankan openclaw:
         </p>
         <ul>
             <li><strong>DigitalOcean</strong> - Mulai $6/bulan, mudah digunakan, dokumentasi lengkap</li>
@@ -369,9 +369,9 @@
             <li><strong>Amazon Lightsail</strong> - Mulai $3.5/bulan, integrasi mudah dengan AWS</li>
         </ul>
 
-        <h2>Kebutuhan API Key untuk ClawdBot</h2>
+        <h2>Kebutuhan API Key untuk openclaw</h2>
         <p>
-            ClawdBot membutuhkan API key dari LLM provider untuk berfungsi. Pilihan utama:
+            openclaw membutuhkan API key dari LLM provider untuk berfungsi. Pilihan utama:
         </p>
 
         <h3>1. OpenAI API (GPT-4 / GPT-4o)</h3>
@@ -421,7 +421,7 @@
         <h2>Perkiraan Total Biaya Bulanan</h2>
         <ul>
             <li><strong>VPS:</strong> $5-20/bulan (tergantung spesifikasi dan provider)</li>
-            <li><strong>API Usage:</strong> $20-100/bulan (tergantung seberapa sering ClawdBot digunakan)</li>
+            <li><strong>API Usage:</strong> $20-100/bulan (tergantung seberapa sering openclaw digunakan)</li>
             <li><strong>Total:</strong> Sekitar <strong>$25-120/bulan</strong> atau Rp 400.000 - Rp 2.000.000</li>
         </ul>
 
@@ -434,7 +434,7 @@
             <li>✅ Pertimbangkan model lokal jika privacy concern tinggi</li>
         </ul>
 
-        <h2>FAQ Kebutuhan ClawdBot</h2>
+        <h2>FAQ Kebutuhan openclaw</h2>
 
         <h3>Apakah harus beli API key dari dua provider?</h3>
         <p>
@@ -450,7 +450,7 @@
 
         <h3>Apakah biaya API sebanding dengan manfaatnya?</h3>
         <p>
-            Untuk penggunaan intensif, biaya API bisa terasa signifikan. Namun jika ClawdBot digunakan
+            Untuk penggunaan intensif, biaya API bisa terasa signifikan. Namun jika openclaw digunakan
             untuk produktivitas yang meningkatkan value kerja, biasanya ROI positif. Pertimbangkan
             use case dan budget Anda.
         </p>
@@ -461,7 +461,7 @@
                 Jika Anda tidak punya kartu kredit untuk membeli API key (OpenAI/Claude) atau sewa VPS,
                 <strong>dibayar.in</strong> siap membantu! Kami bantu pembelian dan setup lengkap.
             </p>
-            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20atau%20sewa%20VPS%20untuk%20ClawdBot%20via%20dibayar.in"
+            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20atau%20sewa%20VPS%20untuk%20openclaw%20via%20dibayar.in"
                 class="btn-wa" target="_blank" rel="noopener noreferrer">
                 Chat Admin - Beli API Key & VPS
             </a>
@@ -474,10 +474,10 @@
         <div class="related">
             <h3>Artikel Terkait</h3>
             <div class="related-links">
-                <a href="apa-itu-clawdbot-dan-fungsinya.html">Apa Itu ClawdBot dan Fungsinya</a>
-                <a href="cara-install-dan-setup-clawdbot.html">Cara Install dan Setup ClawdBot</a>
-                <a href="clawdbot-untuk-produktivitas-dan-automasi.html">ClawdBot untuk Produktivitas</a>
-                <a href="cara-bayar-vps-dan-api-ai-untuk-clawdbot.html">Cara Bayar VPS & API AI</a>
+                <a href="apa-itu-openclaw-dan-fungsinya.html">Apa Itu openclaw dan Fungsinya</a>
+                <a href="cara-install-dan-setup-openclaw.html">Cara Install dan Setup openclaw</a>
+                <a href="openclaw-untuk-produktivitas-dan-automasi.html">openclaw untuk Produktivitas</a>
+                <a href="cara-bayar-vps-dan-api-ai-untuk-openclaw.html">Cara Bayar VPS & API AI</a>
                 <a href="jasa-bayar-semua-platform-ai-tanpa-kartu-kredit.html">Jasa Bayar AI Tools</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
             </div>
