--- a/openclaw-untuk-produktivitas-dan-automasi.html
+++ b/openclaw-untuk-produktivitas-dan-automasi.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ClawdBot untuk Produktivitas dan Automasi - Contoh Use Case | dibayar.in</title>
+    <title>openclaw untuk Produktivitas dan Automasi - Contoh Use Case | dibayar.in</title>
     <meta name="description"
-        content="Pelajari cara menggunakan ClawdBot untuk meningkatkan produktivitas dan automasi tugas harian. Contoh use case praktis untuk professional, freelancer, dan bisnis.">
+        content="Pelajari cara menggunakan openclaw untuk meningkatkan produktivitas dan automasi tugas harian. Contoh use case praktis untuk professional, freelancer, dan bisnis.">
     <meta name="keywords"
-        content="ClawdBot produktivitas, automasi dengan ClawdBot, use case ClawdBot, ClawdBot untuk bisnis, ClawdBot freelancer">
+        content="openclaw produktivitas, automasi dengan openclaw, use case openclaw, openclaw untuk bisnis, openclaw freelancer">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://dibayar.in/clawdbot-untuk-produktivitas-dan-automasi.html">
+    <link rel="canonical" href="https://dibayar.in/openclaw-untuk-produktivitas-dan-automasi.html">
     <meta name="author" content="dibayar.in">
 
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://dibayar.in/clawdbot-untuk-produktivitas-dan-automasi.html">
-    <meta property="og:title" content="ClawdBot untuk Produktivitas dan Automasi - Contoh Use Case">
+    <meta property="og:url" content="https://dibayar.in/openclaw-untuk-produktivitas-dan-automasi.html">
+    <meta property="og:title" content="openclaw untuk Produktivitas dan Automasi - Contoh Use Case">
     <meta property="og:description"
-        content="Contoh praktis penggunaan ClawdBot untuk automasi tugas dan meningkatkan produktivitas.">
+        content="Contoh praktis penggunaan openclaw untuk automasi tugas dan meningkatkan produktivitas.">
     <meta property="og:locale" content="id_ID">
 
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "ClawdBot untuk Produktivitas dan Automasi - Contoh Use Case",
+        "headline": "openclaw untuk Produktivitas dan Automasi - Contoh Use Case",
         "author": { "@type": "Organization", "name": "dibayar.in" },
         "publisher": { "@type": "Organization", "name": "dibayar.in" },
         "datePublished": "2025-01-27",
@@ -226,24 +226,24 @@
         <a href="index.html" class="logo">dibayar<span>.in</span></a>
 
         <nav class="breadcrumb">
-            <a href="index.html">Home</a> › <a href="apa-itu-clawdbot-dan-fungsinya.html">ClawdBot</a> ›
+            <a href="index.html">Home</a> › <a href="apa-itu-openclaw-dan-fungsinya.html">openclaw</a> ›
             Produktivitas & Automasi
         </nav>
 
-        <h1>ClawdBot untuk Produktivitas dan Automasi - Contoh Use Case</h1>
+        <h1>openclaw untuk Produktivitas dan Automasi - Contoh Use Case</h1>
         <p>
-            <strong>ClawdBot</strong> bukan sekadar chatbot, tapi AI assistant yang bisa benar-benar bekerja untuk Anda.
-            Dalam artikel ini, kita akan lihat berbagai cara menggunakan ClawdBot untuk meningkatkan produktivitas
+            <strong>openclaw</strong> bukan sekadar chatbot, tapi AI assistant yang bisa benar-benar bekerja untuk Anda.
+            Dalam artikel ini, kita akan lihat berbagai cara menggunakan openclaw untuk meningkatkan produktivitas
             dan mengautomasi tugas-tugas sehari-hari.
         </p>
 
         <div class="highlight-box">
-            <strong>💡 Keunggulan ClawdBot:</strong> Berbeda dengan ChatGPT yang hanya bisa menjawab pertanyaan,
-            ClawdBot bisa <strong>melakukan aksi nyata</strong> seperti mengirim email, mengorganisir file,
+            <strong>💡 Keunggulan openclaw:</strong> Berbeda dengan ChatGPT yang hanya bisa menjawab pertanyaan,
+            openclaw bisa <strong>melakukan aksi nyata</strong> seperti mengirim email, mengorganisir file,
             melakukan research, dan banyak lagi.
         </div>
 
-        <h2>Use Case ClawdBot untuk Professional</h2>
+        <h2>Use Case openclaw untuk Professional</h2>
         <div class="usecase-grid">
             <div class="usecase-card">
                 <div class="emoji">📧</div>
@@ -267,9 +267,9 @@
             </div>
         </div>
 
-        <h2>Contoh Perintah untuk ClawdBot</h2>
+        <h2>Contoh Perintah untuk openclaw</h2>
         <p>
-            Berikut contoh-contoh perintah yang bisa Anda berikan kepada ClawdBot:
+            Berikut contoh-contoh perintah yang bisa Anda berikan kepada openclaw:
         </p>
 
         <div class="example-box">
@@ -333,18 +333,18 @@
             <li>🗓️ <strong>Content Calendar:</strong> Buat dan manage content calendar</li>
         </ul>
 
-        <h2>Tips Maksimalkan Produktivitas dengan ClawdBot</h2>
+        <h2>Tips Maksimalkan Produktivitas dengan openclaw</h2>
         <ul>
-            <li>✅ <strong>Definisikan Role dengan Jelas:</strong> Set system prompt yang spesifik tentang tugas ClawdBot</li>
+            <li>✅ <strong>Definisikan Role dengan Jelas:</strong> Set system prompt yang spesifik tentang tugas openclaw</li>
             <li>✅ <strong>Start Small:</strong> Mulai dengan task sederhana sebelum memberikan responsibility kompleks</li>
             <li>✅ <strong>Buat Template:</strong> Siapkan template untuk task yang berulang</li>
             <li>✅ <strong>Review dan Iterate:</strong> Evaluasi hasil dan perbaiki prompt secara berkala</li>
-            <li>✅ <strong>Kombinasi Manusia-AI:</strong> Gunakan ClawdBot sebagai assistant, bukan pengganti sepenuhnya</li>
+            <li>✅ <strong>Kombinasi Manusia-AI:</strong> Gunakan openclaw sebagai assistant, bukan pengganti sepenuhnya</li>
         </ul>
 
-        <h2>ClawdBot vs Tool Automasi Lainnya</h2>
+        <h2>openclaw vs Tool Automasi Lainnya</h2>
         <p>
-            ClawdBot berbeda dengan tool automasi seperti Zapier atau Make karena:
+            openclaw berbeda dengan tool automasi seperti Zapier atau Make karena:
         </p>
         <ul>
             <li><strong>More Flexible:</strong> Bisa handle task yang kompleks dan tidak terstruktur</li>
@@ -354,12 +354,12 @@
         </ul>
 
         <div class="cta-box">
-            <strong>Siap Implementasi ClawdBot untuk Produktivitas?</strong>
+            <strong>Siap Implementasi openclaw untuk Produktivitas?</strong>
             <p style="margin-top:8px;margin-bottom:0;">
-                Untuk menjalankan ClawdBot 24/7 dengan performa optimal, Anda membutuhkan API key (OpenAI/Claude)
+                Untuk menjalankan openclaw 24/7 dengan performa optimal, Anda membutuhkan API key (OpenAI/Claude)
                 dan mungkin VPS. Jika tidak punya kartu kredit untuk pembelian tersebut, <strong>dibayar.in</strong> siap membantu!
             </p>
-            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20atau%20sewa%20VPS%20untuk%20ClawdBot%20via%20dibayar.in"
+            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20beli%20API%20key%20atau%20sewa%20VPS%20untuk%20openclaw%20via%20dibayar.in"
                 class="btn-wa" target="_blank" rel="noopener noreferrer">
                 Chat Admin - Beli API Key & VPS
             </a>
@@ -372,10 +372,10 @@
         <div class="related">
             <h3>Artikel Terkait</h3>
             <div class="related-links">
-                <a href="apa-itu-clawdbot-dan-fungsinya.html">Apa Itu ClawdBot dan Fungsinya</a>
-                <a href="cara-install-dan-setup-clawdbot.html">Cara Install dan Setup ClawdBot</a>
-                <a href="kebutuhan-vps-dan-api-untuk-clawdbot.html">Kebutuhan VPS dan API untuk ClawdBot</a>
-                <a href="cara-bayar-vps-dan-api-ai-untuk-clawdbot.html">Cara Bayar VPS & API AI</a>
+                <a href="apa-itu-openclaw-dan-fungsinya.html">Apa Itu openclaw dan Fungsinya</a>
+                <a href="cara-install-dan-setup-openclaw.html">Cara Install dan Setup openclaw</a>
+                <a href="kebutuhan-vps-dan-api-untuk-openclaw.html">Kebutuhan VPS dan API untuk openclaw</a>
+                <a href="cara-bayar-vps-dan-api-ai-untuk-openclaw.html">Cara Bayar VPS & API AI</a>
                 <a href="jasa-bayar-semua-platform-ai-tanpa-kartu-kredit.html">Jasa Bayar AI Tools</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
             </div>
