--- a/vps-murah-untuk-bot-10-provider-indonesia-termurah.html
+++ b/vps-murah-untuk-bot-10-provider-indonesia-termurah.html
@@ -247,13 +247,13 @@
         <h1>VPS Murah untuk Bot: 10 Provider Indonesia Termurah dengan Uptime 99.9%</h1>
         <p>
             Mencari <strong>VPS murah untuk running bot 24/7</strong>? Berikut daftar 10 provider VPS termurah
-            yang bisa diakses dari Indonesia dengan uptime di atas 99.9%, cocok untuk Clawdbot, Telegram bot,
+            yang bisa diakses dari Indonesia dengan uptime di atas 99.9%, cocok untuk openclaw, Telegram bot,
             WhatsApp bot, dan berbagai jenis bot lainnya.
         </p>
 
         <div class="highlight-box">
             <strong>💡 Tips Memilih VPS untuk Bot:</strong> Untuk bot sederhana, spesifikasi <strong>1GB RAM,
-            1 CPU</strong> sudah cukup. Untuk AI bot seperti Clawdbot yang membutuhkan lebih banyak resources,
+            1 CPU</strong> sudah cukup. Untuk AI bot seperti openclaw yang membutuhkan lebih banyak resources,
             recommended <strong>2GB RAM, 2 CPU</strong> atau lebih.
         </div>
 
@@ -485,7 +485,7 @@
             tidak butuh banyak resources, spesifikasi basic sudah cukup.
         </p>
 
-        <h3>Untuk AI Bot (Clawdbot, Chatbot)</h3>
+        <h3>Untuk AI Bot (openclaw, Chatbot)</h3>
         <p>
             <strong>Rekomendasi:</strong> Hetzner (€4.60 untuk 2GB) atau Contabo ($6.99 untuk 4GB).
             AI bot butuh lebih banyak RAM untuk processing.
@@ -549,11 +549,11 @@
         <div class="related">
             <h3>Artikel Terkait VPS</h3>
             <div class="related-links">
-                <a href="kebutuhan-vps-dan-api-untuk-clawdbot.html">Kebutuhan VPS dan API untuk ClawdBot</a>
+                <a href="kebutuhan-vps-dan-api-untuk-openclaw.html">Kebutuhan VPS dan API untuk openclaw</a>
                 <a href="cara-setup-vps-untuk-bot-telegram.html">Cara Setup VPS untuk Bot Telegram</a>
                 <a href="vps-untuk-payment-bot.html">VPS untuk Payment Bot</a>
                 <a href="bot-whatsapp-automation-di-vps.html">Bot WhatsApp Automation di VPS</a>
-                <a href="cara-bayar-vps-dan-api-ai-untuk-clawdbot.html">Cara Bayar VPS & API AI</a>
+                <a href="cara-bayar-vps-dan-api-ai-untuk-openclaw.html">Cara Bayar VPS & API AI</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
             </div>
         </div>
