--- a/vps-untuk-payment-bot.html
+++ b/vps-untuk-payment-bot.html
@@ -455,8 +455,8 @@
         <div class="related">
             <h3>Artikel Terkait</h3>
             <div class="related-links">
-                <a href="clawdbot-untuk-automasi-payment.html">Clawdbot untuk Automasi Payment</a>
-                <a href="setup-self-hosted-clawdbot-payment-bot-di-vps-linux.html">Setup Clawdbot Payment Bot</a>
+                <a href="openclaw-untuk-automasi-payment.html">openclaw untuk Automasi Payment</a>
+                <a href="setup-self-hosted-openclaw-payment-bot-di-vps-linux.html">Setup openclaw Payment Bot</a>
                 <a href="vps-murah-untuk-bot-10-provider-indonesia-termurah.html">VPS Murah untuk Bot</a>
                 <a href="cara-setup-vps-untuk-bot-telegram.html">Cara Setup VPS untuk Bot Telegram</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
