--- a/bot-whatsapp-automation-di-vps.html
+++ b/bot-whatsapp-automation-di-vps.html
@@ -473,7 +473,7 @@
         <div class="related">
             <h3>Artikel Terkait</h3>
             <div class="related-links">
-                <a href="clawdbot-untuk-automasi-payment.html">Clawdbot untuk Automasi Payment</a>
+                <a href="openclaw-untuk-automasi-payment.html">openclaw untuk Automasi Payment</a>
                 <a href="vps-untuk-payment-bot.html">VPS untuk Payment Bot</a>
                 <a href="cara-setup-vps-untuk-bot-telegram.html">Cara Setup VPS untuk Bot Telegram</a>
                 <a href="vps-murah-untuk-bot-10-provider-indonesia-termurah.html">VPS Murah untuk Bot</a>
