--- a/openclaw-untuk-automasi-payment.html
+++ b/openclaw-untuk-automasi-payment.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clawdbot untuk Automasi Payment: Setup AI Payment Bot dengan Clawdbot | dibayar.in</title>
+    <title>openclaw untuk Automasi Payment: Setup AI Payment Bot dengan openclaw | dibayar.in</title>
     <meta name="description"
-        content="Pelajari cara menggunakan Clawdbot untuk automasi payment dan setup AI payment bot. Automasi konfirmasi pembayaran, notifikasi, dan manajemen transaksi dengan Clawdbot.">
+        content="Pelajari cara menggunakan openclaw untuk automasi payment dan setup AI payment bot. Automasi konfirmasi pembayaran, notifikasi, dan manajemen transaksi dengan openclaw.">
     <meta name="keywords"
-        content="Clawdbot automasi payment, AI payment bot, bot konfirmasi pembayaran, automasi pembayaran, Clawdbot payment automation">
+        content="openclaw automasi payment, AI payment bot, bot konfirmasi pembayaran, automasi pembayaran, openclaw payment automation">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://dibayar.in/clawdbot-untuk-automasi-payment.html">
+    <link rel="canonical" href="https://dibayar.in/openclaw-untuk-automasi-payment.html">
     <meta name="author" content="dibayar.in">
 
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://dibayar.in/clawdbot-untuk-automasi-payment.html">
-    <meta property="og:title" content="Clawdbot untuk Automasi Payment: Setup AI Payment Bot">
+    <meta property="og:url" content="https://dibayar.in/openclaw-untuk-automasi-payment.html">
+    <meta property="og:title" content="openclaw untuk Automasi Payment: Setup AI Payment Bot">
     <meta property="og:description"
-        content="Panduan lengkap automasi payment dengan Clawdbot untuk bisnis Anda.">
+        content="Panduan lengkap automasi payment dengan openclaw untuk bisnis Anda.">
     <meta property="og:locale" content="id_ID">
 
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Article",
-        "headline": "Clawdbot untuk Automasi Payment: Setup AI Payment Bot dengan Clawdbot",
+        "headline": "openclaw untuk Automasi Payment: Setup AI Payment Bot dengan openclaw",
         "author": { "@type": "Organization", "name": "dibayar.in" },
         "publisher": { "@type": "Organization", "name": "dibayar.in" },
         "datePublished": "2025-01-27",
@@ -209,24 +209,24 @@
         <a href="index.html" class="logo">dibayar<span>.in</span></a>
 
         <nav class="breadcrumb">
-            <a href="index.html">Home</a> › <a href="apa-itu-clawdbot-dan-fungsinya.html">ClawdBot</a> › Automasi
+            <a href="index.html">Home</a> › <a href="apa-itu-openclaw-dan-fungsinya.html">openclaw</a> › Automasi
             Payment
         </nav>
 
-        <h1>Clawdbot untuk Automasi Payment: Setup AI Payment Bot dengan Clawdbot</h1>
+        <h1>openclaw untuk Automasi Payment: Setup AI Payment Bot dengan openclaw</h1>
         <p>
-            <strong>Clawdbot</strong> bisa menjadi solusi powerful untuk automasi payment dalam bisnis Anda.
-            Dengan kemampuan AI agent yang bisa berjalan 24/7, Clawdbot dapat menghandle konfirmasi pembayaran,
+            <strong>openclaw</strong> bisa menjadi solusi powerful untuk automasi payment dalam bisnis Anda.
+            Dengan kemampuan AI agent yang bisa berjalan 24/7, openclaw dapat menghandle konfirmasi pembayaran,
             mengirim notifikasi, dan mengelola transaksi secara otomatis melalui berbagai platform chat.
         </p>
 
         <div class="highlight-box">
-            <strong>💡 Kenapa Clawdbot untuk Payment?</strong> Clawdbot berbeda dari bot payment biasa karena
+            <strong>💡 Kenapa openclaw untuk Payment?</strong> openclaw berbeda dari bot payment biasa karena
             memiliki <strong>kecerdasan AI</strong> untuk memahami konteks, menghandle edge cases, dan memberikan
             respons yang personal ke setiap customer.
         </div>
 
-        <h2>Use Case Automasi Payment dengan Clawdbot</h2>
+        <h2>Use Case Automasi Payment dengan openclaw</h2>
         <div class="feature-grid">
             <div class="feature-card">
                 <div class="icon">✅</div>
@@ -260,10 +260,10 @@
             </div>
         </div>
 
-        <h2> Cara Kerja Payment Bot dengan Clawdbot</h2>
+        <h2> Cara Kerja Payment Bot dengan openclaw</h2>
         <ol>
             <li><strong>Payment Masuk:</strong> Customer transfer atau bayar via QRIS/payment gateway</li>
-            <li><strong>Deteksi:</strong> Clawdbot memonitor bank statement atau webhook payment gateway</li>
+            <li><strong>Deteksi:</strong> openclaw memonitor bank statement atau webhook payment gateway</li>
             <li><strong>AI Processing:</strong> AI analisis dan match payment dengan invoice/order yang sesuai</li>
             <li><strong>Konfirmasi:</strong> Bot kirim notifikasi ke customer bahwa payment diterima</li>
             <li><strong>Update System:</strong> Update status order di database sistem Anda</li>
@@ -272,7 +272,7 @@
 
         <h2>Platform yang Bisa Diintegrasikan</h2>
         <p>
-            Clawdbot bisa diintegrasikan dengan berbagai platform untuk automasi payment:
+            openclaw bisa diintegrasikan dengan berbagai platform untuk automasi payment:
         </p>
         <ul>
             <li><strong>WhatsApp Business:</strong> Kirim konfirmasi dan notifikasi via WhatsApp</li>
@@ -292,28 +292,28 @@
             <li><strong>Bank Transfer API:</strong> Cek mutasi rekening secara otomatis</li>
         </ul>
 
-        <h2>Contoh Implementasi Clawdbot untuk Payment</h2>
+        <h2>Contoh Implementasi openclaw untuk Payment</h2>
 
         <h3>Scenario 1: Konfirmasi Payment Jasa</h3>
         <p>
-            Customer bayar jasa via transfer bank → Clawdbot deteksi dari mutasi bank → Match dengan invoice
+            Customer bayar jasa via transfer bank → openclaw deteksi dari mutasi bank → Match dengan invoice
             → Kirim WhatsApp konfirmasi + invoice PDF → Update status di sistem internal → Notify tim untuk
             mulai kerja.
         </p>
 
         <h3>Scenario 2: Subscription Payment</h3>
         <p>
-            Customer langganan bulanan → Clawdbot kirim reminder 3 hari sebelum jatuh tempo → Deteksi
+            Customer langganan bulanan → openclaw kirim reminder 3 hari sebelum jatuh tempo → Deteksi
             pembayaran masuk → Auto-renew subscription → Kirim receipt dan extend access.
         </p>
 
         <h3>Scenario 3: E-order Payment</h3>
         <p>
-            Customer place order → Dapatkan instruksi pembayaran → Customer transfer → Clawdbot verify
+            Customer place order → Dapatkan instruksi pembayaran → Customer transfer → openclaw verify
             → Send payment confirmation → Trigger shipping/delivery.
         </p>
 
-        <h2>Keuntungan Menggunakan Clawdbot untuk Payment</h2>
+        <h2>Keuntungan Menggunakan openclaw untuk Payment</h2>
         <ul>
             <li>✅ <strong>24/7 Availability:</strong> Payment bot selalu online, siap handle kapan saja</li>
             <li>✅ <strong>AI Intelligence:</strong> Bisa handle kasus kompleks dan edge cases</li>
@@ -323,16 +323,16 @@
             <li>✅ <strong>Reduced Error:</strong> Minimize human error dalam verifikasi payment</li>
         </ul>
 
-        <h2>Tech Stack untuk Clawdbot Payment Bot</h2>
+        <h2>Tech Stack untuk openclaw Payment Bot</h2>
         <ul>
-            <li><strong>Clawdbot:</strong> AI engine untuk processing dan decision making</li>
+            <li><strong>openclaw:</strong> AI engine untuk processing dan decision making</li>
             <li><strong>VPS:</strong> Hosting untuk bot 24/7 (DigitalOcean, Linode, dll)</li>
             <li><strong>Database:</strong> MySQL/PostgreSQL untuk menyimpan transaction data</li>
             <li><strong>API:</strong> Integrasi dengan payment gateway dan bank API</li>
             <li><strong>Webhook:</strong> Real-time notification dari payment gateway</li>
         </ul>
 
-        <h2>Keamanan Payment Bot dengan Clawdbot</h2>
+        <h2>Keamanan Payment Bot dengan openclaw</h2>
         <ul>
             <li>🔐 <strong>Encryption:</strong> Enkripsi semua sensitive data seperti nomor rekening</li>
             <li>🔐 <strong>Access Control:</strong> Batasi akses ke payment information</li>
@@ -350,12 +350,12 @@
         </ul>
 
         <div class="cta-box">
-            <strong>Butuh VPS dan API untuk Payment Bot dengan Clawdbot?</strong>
+            <strong>Butuh VPS dan API untuk Payment Bot dengan openclaw?</strong>
             <p style="margin-top:8px;margin-bottom:0;">
-                Untuk menjalankan Clawdbot payment bot 24/7, Anda membutuhkan VPS dan API key (OpenAI/Claude).
+                Untuk menjalankan openclaw payment bot 24/7, Anda membutuhkan VPS dan API key (OpenAI/Claude).
                 Jika tidak punya kartu kredit untuk sewa VPS atau beli API, <strong>dibayar.in</strong> siap membantu!
             </p>
-            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20setup%20payment%20bot%20pakai%20Clawdbot%20dan%20butuh%20bantuan%20sewa%20VPS%20dan%20API%20via%20dibayar.in"
+            <a href="https://wa.me/6282347303153?text=Halo%20kak%2C%20saya%20mau%20setup%20payment%20bot%20pakai%20openclaw%20dan%20butuh%20bantuan%20sewa%20VPS%20dan%20API%20via%20dibayar.in"
                 class="btn-wa" target="_blank" rel="noopener noreferrer">
                 Chat Admin - Sewa VPS & Beli API
             </a>
@@ -366,11 +366,11 @@
         </div>
 
         <div class="related">
-            <h3>Artikel Terkait ClawdBot Payment</h3>
+            <h3>Artikel Terkait openclaw Payment</h3>
             <div class="related-links">
-                <a href="apa-itu-clawdbot-dan-fungsinya.html">Apa Itu Clawdbot dan Fungsinya</a>
-                <a href="cara-install-dan-setup-clawdbot.html">Cara Install dan Setup Clawdbot</a>
-                <a href="kebutuhan-vps-dan-api-untuk-clawdbot.html">Kebutuhan VPS dan API untuk ClawdBot</a>
+                <a href="apa-itu-openclaw-dan-fungsinya.html">Apa Itu openclaw dan Fungsinya</a>
+                <a href="cara-install-dan-setup-openclaw.html">Cara Install dan Setup openclaw</a>
+                <a href="kebutuhan-vps-dan-api-untuk-openclaw.html">Kebutuhan VPS dan API untuk openclaw</a>
                 <a href="vps-untuk-payment-bot.html">VPS untuk Payment Bot</a>
                 <a href="bot-whatsapp-automation-di-vps.html">Bot WhatsApp Automation di VPS</a>
                 <a href="index.html">Kembali ke Halaman Utama</a>
